cmake_minimum_required(VERSION 2.8.3)
project(serial_device_interface)

add_compile_options(-std=c++11)
add_definitions(-Wall -Werror)


# include_directories(
#   include
#   ${catkin_INCLUDE_DIRS}
# )

# set(SERIAL_DEVICE_INTERFACE_LIB serial_device_interface)
# add_library(${SERIAL_DEVICE_INTERFACE_LIB}
#   src/serial_device_interface.cpp
# )
